fixed the alignment of preferences and themes in the admin menubar

--- a/app/webroot/css/admin.css
+++ b/app/webroot/css/admin.css
@@ -56,8 +56,8 @@ ul.topnav {
 	list-style: none;
 	padding: 0 20px;
 	margin: 0;
-	float: left;
-	width: 920px;
+	float: right;
+
 	background: #222;
 	font-size: 1.2em;
 	background: url(topnav_bg.gif) repeat-x;
@@ -89,12 +89,11 @@ ul.topnav li ul.subnav {
 	list-style: none;
 	position: absolute; /*--Important - Keeps subnav from affecting main navigation flow--*/
 	left: 0; top: 35px;
-	background: #333;
+	background: #000;
 	margin: 0; padding: 0;
 	display: none;
 	float: left;
 	width: 170px;
-	border: 1px solid #111;
 }
 ul.topnav li ul.subnav li{
 	margin: 0; padding: 0;
